# totallynotavirus

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: apps.hpp  coreApps.hpp  desktop.hpp  game.hpp  glitchManager.hpp  installerApps.hpp  virtualWindow.hpp
src/: apps.cpp  coreApps.cpp  desktop.cpp  game.cpp  glitchManager.cpp  installerApps.cpp  main.cpp  virtualWindow.cpp
